# s2015ocl

./: CMakeLists.txt  automaton.cl  render.cl  visualize.cl
include/: audio.hpp  common.hpp  gui.hpp
src/: audio.cpp  gui.cpp  main.cpp
